--- a/image.html
+++ b/image.html
@@ -8,7 +8,7 @@
 <body>
 
     <!-- The image button -->
-    <img src="copy-icon.png" alt="Copy Script" id="copyButton" style="cursor: pointer; width: 50px;">
+    <img src="icons8-clipboard-24.png" alt="Copy Script" id="copyButton" style="cursor: pointer; width: 50px;">
 
     <!-- The script to be copied (hidden) -->
     <textarea id="scriptText" style="position: absolute; left: -9999px;">
