--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Copy Text Button</title>
     <style>
         .copy-button {
-            background: url('copy-icon.png') no-repeat center center;
+            background: url('icons8-clipboard-24.png') no-repeat center center;
             background-size: contain;
             width: 50px;
             height: 50px;
