--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,8 @@
 
     <section>
         <h2>Get in Touch</h2>
-        <p>Email: your-email@example.com</p>
-        <p>Discord: yourDiscordTag</p>
+        <p>Email: ishaiproteam@gmail.com</p>
+        <p>Discord: Dont have</p>
     </section>
 
     <footer>
